tests/more_classes/more_classes.exp
Error ----------------------------------------------------------------------------------------------------- Bar.js:13:19

Cannot assign `"?"` to `(new Qux()).w` because string [1] is incompatible with number [2]. [incompatible-type]

   Bar.js:13:19
   13|     new Qux().w = "?";
                         ^^^ [1]

References:
   Qux.js:2:5
    2|   w:number;
           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- Foo.js:19:12

Cannot extend `Qux` [1] with `Foo` because string [2] is incompatible with number [3] in the first parameter of property
`fooqux`. [incompatible-extend]

   Foo.js:19:12
   19|   fooqux(x:string) {
                  ^^^^^^ [2]

References:
   Foo.js:5:19
    5| class Foo extends Qux {
                         ^^^ [1]
   Qux.js:6:12
    6|   fooqux(x:number) { }
                  ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------------- Foo.js:8:5

Must call `super` before accessing this [1] in a derived constructor. [reference-before-declaration]

   Foo.js:8:5
   8|     this.x = x;
          ^^^^

References:
   Foo.js:5:7
   5| class Foo extends Qux {
            ^^^ [1]


Error ----------------------------------------------------------------------------------------------------- Foo.js:14:21

Cannot call `Bar` with `y` bound to `y` because string [1] is incompatible with number [2]. [incompatible-call]

   Foo.js:14:21
   14|     var v = new Bar(y);
                           ^

References:
   Foo.js:11:9
   11|   foo(y:string,z:string):number {
               ^^^^^^ [1]
   Bar.js:7:17
    7|   constructor(y:number) {
                       ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- Foo.js:16:12

Cannot return `v.bar(...)` because string [1] is incompatible with number [2]. [incompatible-return]

   Foo.js:16:12
   16|     return v.bar(z,u);
                  ^^^^^^^^^^

References:
   Bar.js:12:26
   12|   bar(z:string,u:string):string {
                                ^^^^^^ [1]
   Foo.js:11:26
   11|   foo(y:string,z:string):number {
                                ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- Foo.js:16:20

Cannot call `v.bar` with `u` bound to `u` because number [1] is incompatible with string [2]. [incompatible-call]

   Foo.js:16:20
   16|     return v.bar(z,u);
                          ^

References:
   Qux.js:4:10
    4|   qux(): number { return this.w; }
                ^^^^^^ [1]
   Bar.js:12:18
   12|   bar(z:string,u:string):string {
                        ^^^^^^ [2]



Found 6 errors
